--- a/style/rich-text-editor.css
+++ b/style/rich-text-editor.css
@@ -33,6 +33,10 @@
   display: none;
 }
 
+.RichEditor-editor .public-DraftStyleDefault-block {
+  margin: 5px 0;
+}
+
 .RichEditor-editor .RichEditor-blockquote {
   border-left: 5px solid #eee;
   color: #666;
